--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Upload Image for Prediction</h1>
-    <form action="/" method="post" enctype="multipart/form-data">
+    <form action="/predict" method="post" enctype="multipart/form-data">
         <input type="file" name="file">
         <input type="submit" value="Upload">
     </form>
