--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Upload Image for Prediction</title>
 </head>
 <body>
-    <h1>Upload Image for Prediction</h1>
+    <h1>Uploads Image for Prediction</h1>
     <form action="/predict" method="post" enctype="multipart/form-data">
         <input type="file" name="file">
         <input type="submit" value="Upload">
